--- a/ContactsBook/Base.lproj/Main.storyboard
+++ b/ContactsBook/Base.lproj/Main.storyboard
@@ -18,18 +18,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="dgq-ne-yxs">
-                                <rect key="frame" x="0.0" y="48" width="414" height="814"/>
+                                <rect key="frame" x="0.0" y="48" width="414" height="770"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="xcQ-Tu-IA9"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Z4T-gs-ZTT"/>
                                 </connections>
                             </tableView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gBn-v5-vxu">
+                                <rect key="frame" x="0.0" y="818" width="414" height="44"/>
+                                <items>
+                                    <barButtonItem title="Item" id="lte-ul-MZp"/>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dgq-ne-yxs" secondAttribute="bottom" id="8mb-oe-4s7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gBn-v5-vxu" secondAttribute="bottom" id="8yF-82-cYo"/>
+                            <constraint firstItem="gBn-v5-vxu" firstAttribute="top" secondItem="dgq-ne-yxs" secondAttribute="bottom" id="MPq-a2-O6T"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dgq-ne-yxs" secondAttribute="trailing" id="UIK-sM-C01"/>
+                            <constraint firstItem="gBn-v5-vxu" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Xun-7h-uTm"/>
+                            <constraint firstItem="gBn-v5-vxu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="s5V-dK-UvH"/>
                             <constraint firstItem="dgq-ne-yxs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="shm-aB-bDW"/>
                             <constraint firstItem="dgq-ne-yxs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zYL-EG-38e"/>
                         </constraints>
@@ -37,7 +47,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="131" y="-27"/>
+            <point key="canvasLocation" x="130.43478260869566" y="-27.455357142857142"/>
         </scene>
     </scenes>
     <resources>
