--- a/ContactsBook/Base.lproj/Main.storyboard
+++ b/ContactsBook/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="dgq-ne-yxs">
-                                <rect key="frame" x="0.0" y="48" width="414" height="770"/>
+                                <rect key="frame" x="0.0" y="48" width="414" height="765"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="xcQ-Tu-IA9"/>
@@ -26,9 +26,14 @@
                                 </connections>
                             </tableView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gBn-v5-vxu">
-                                <rect key="frame" x="0.0" y="818" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
                                 <items>
-                                    <barButtonItem title="Item" id="lte-ul-MZp"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="PKy-ce-Zs4"/>
+                                    <barButtonItem title="Create a contact" id="lte-ul-MZp">
+                                        <connections>
+                                            <action selector="showNewContactAlert" destination="BYZ-38-t0r" id="6FY-LI-cxW"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                         </subviews>
@@ -44,6 +49,9 @@
                             <constraint firstItem="dgq-ne-yxs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zYL-EG-38e"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="dgq-ne-yxs" id="8Gr-qQ-gYg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
